--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ repository = "https://github.com/ssb-ngi-pointer/ssb-bfe-rs"
 [dependencies]
 anyhow = "1.0"
 base64 = "0.13"
-lazy_static = "1.4.0"
-regex = "1"
-serde_json = "1.0"
+indexmap = { version = "1.7.0", features = ["serde"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0", features = ["preserve_order"] }
