--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ssb-bfe-rs"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Andrew Reid <glyph@mycelial.technology>"]
 description = "Binary Field Encodings (BFE) for Secure Scuttlebutt (SSB)"
 edition = "2018"
@@ -13,5 +13,7 @@ repository = "https://github.com/ssb-ngi-pointer/ssb-bfe-rs"
 anyhow = "1.0"
 base64 = "0.13"
 indexmap = { version = "1.7.0", features = ["serde"] }
+phf = { version = "0.10.0", features = ["macros"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0", features = ["preserve_order"] }
+ssb-uri-rs = "0.1.3"
