another manifest fix

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.2.0"
 authors = ["Andrew Reid <glyph@mycelial.technology>"]
 description = "Binary Field Encodings (BFE) for Secure Scuttlebutt (SSB)"
 edition = "2018"
-keywords = ["ssb", "scuttlebutt", "bfe", "binary_field_encoding"]
+keywords = ["ssb", "scuttlebutt", "bfe", "binary", "encoding"]
 license = "LGPL-3.0"
 readme = "README.md"
 repository = "https://github.com/ssb-ngi-pointer/ssb-bfe-rs"
